# Solitario

./: CMakeLists.txt  main.cpp
Cartasdirec/: Cartas.cpp  Cartas.h  Interfaz.cpp  Interfaz.h  PushPop.cpp  PushPop.h
Documentacion/: .~lock.manual de usuario edd.docx#  Manual tecnico edd.docx  manual de usuario edd.docx
colasypilas/: Colas.cpp  Colas.h  EnlacesDobles.cpp  EnlacesDobles.h  Listas.cpp  Listas.h  NodoDoble.cpp  NodoDoble.h  Nodos.cpp  Nodos.h  Pilas.cpp  Pilas.h
